test/language/errors/errors_table.hm
# property error: expected table but was integer
# property error: expected table but was integer
# table property: expected string but was integer
# table property: expected string but was integer

use "errors"

let x = 48

try { x.foo } except e { echo runtime(e) }
try { x.foo = 64 } except e { echo runtime(e) }

let table = {}

try { table[2] } except e { echo runtime(e) }
try { table[2] = 0 } except e { echo runtime(e) }
